@@ -7,9 +7,10 @@
     * a json file dedicated to sensors has been added.
     * a window and a dictionary to manage mqtt based sensors have been added.
     * a window and a dictionary to manage 1wire based sensors have been added.
+    * specific threads have been added for testing purpose.
 
   * MODIFIED:
-    * mqtt thread has been modified to handle new based sensors.
+    * mqtt thread has been modified to handle new mqtt based sensors.
 
 
 ### March 5 2021, Release version 0.10.1 ###
